# WB-Rust

./: .gitignore  README.md
L0/: Cargo.toml
L0/migrations/: 20240910082731_init.down.sql  20240910082731_init.up.sql
L0/src/: lib.rs  main.rs
L0/src/db/: connection.rs
L0/src/order/: mod.rs  models.rs  services.rs
L0/src/order/api/: handlers.rs  mod.rs  routes.rs
L1/L1-1/: Cargo.toml  README.md
L1/L1-1/src/: main.rs
L1/L1-2/: Cargo.toml  README.md
L1/L1-2/src/: main.rs
L1/L1-3/: Cargo.toml
L1/L1-3/src/: main.rs
L1/L1-4/: Cargo.toml  README.md
L1/L1-4/src/: main.rs
L1/L1-5/: Cargo.toml
L1/L1-5/src/: main.rs
L1/L1-6/: Cargo.toml
L1/L1-6/src/: main.rs
