[package]
name = "L0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "time", "uuid"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
